# assignment-3-soface2026-torsten-frederik

./: CMakeLists.txt
include/: template_calculator.hpp
src/: file_logger.cpp  int_calculator.cpp
